--- a/src/main/webapp/reactjs/package.json
+++ b/src/main/webapp/reactjs/package.json
@@ -8,10 +8,12 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.19.2",
     "bootstrap": "^4.6.0",
+    "history": "^5.0.0",
     "react": "^16.14.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.1.2",
     "redux": "^4.1.0",
